Werken aan mainwindow

--- a/Project_MAL/OEF_Project_MAL/Project_MAL_DAL/Project_MAL_DAL.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_DAL/Project_MAL_DAL.csproj
@@ -65,9 +65,12 @@
     <Compile Include="Character.cs">
       <DependentUpon>MALModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseOperations.cs" />
+    <Compile Include="FileOperations.cs" />
     <Compile Include="Genre.cs">
       <DependentUpon>MALModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="HelperClass.cs" />
     <Compile Include="MALModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
