--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
@@ -139,6 +139,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project_MAL_DAL\Project_MAL_DAL.csproj">
+      <Project>{a5a2fc46-2c74-45b9-91c3-adc8688c8a37}</Project>
+      <Name>Project_MAL_DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
