--- a/Project_MAL/OEF_Project_MAL/Project_MAL_DAL/Project_MAL_DAL.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_DAL/Project_MAL_DAL.csproj
@@ -92,6 +92,8 @@
     <Compile Include="MangaGenre.cs">
       <DependentUpon>MALModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Partials\Character.cs" />
+    <Compile Include="Partials\Manga.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -121,7 +123,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Partials\" />
+    <ProjectReference Include="..\Project_MAL_Models\Project_MAL_Models.csproj">
+      <Project>{825e6f75-9f4e-4943-bac2-e1ef547be709}</Project>
+      <Name>Project_MAL_Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
