--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
@@ -144,6 +144,19 @@
       <Project>{a5a2fc46-2c74-45b9-91c3-adc8688c8a37}</Project>
       <Name>Project_MAL_DAL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Project_MAL_Models\Project_MAL_Models.csproj">
+      <Project>{825e6f75-9f4e-4943-bac2-e1ef547be709}</Project>
+      <Name>Project_MAL_Models</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CharactersImages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MangaImages\Naruto.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="MangaImages\Fullmetal Alchemist.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
