--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
@@ -149,14 +149,15 @@
       <Name>Project_MAL_Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CharactersImages\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="MangaImages\Naruto.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="MangaImages\Fullmetal Alchemist.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="CharactersImages\Naruto.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
