Werken aan addCharacter window

--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/Project_MAL_WPF.csproj
@@ -149,7 +149,9 @@
       <Name>Project_MAL_Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="CharactersImages\Kakashi.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="MangaImages\Naruto.jpg" />
   </ItemGroup>
